--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,191 +1,282 @@
-# File: nginx.conf 
-# Directory: /deepseek-coder-setup/nginx/
-
-# User and worker processes
+# nginx/nginx.conf - Cloudflare SSL termination with IP whitelisting
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
 error_log /var/log/nginx/error.log warn;
 
-# Events configuration
 events {
     worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Log format
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    # Log format with real IP (Cloudflare passes real IP in CF-Connecting-IP header)
+    log_format main '$http_cf_connecting_ip - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'rt=$request_time uct="$upstream_connect_time" '
+                    'uht="$upstream_header_time" urt="$upstream_response_time"';
+    
     access_log /var/log/nginx/access.log main;
 
     # Basic settings
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 120;  # Increased from 65
+    keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 10M;
-
-    # Timeouts - INCREASED FOR 33B MODEL
-    proxy_connect_timeout 600s;  # Increased from 300s
-    proxy_send_timeout 600s;     # Increased from 300s
-    proxy_read_timeout 600s;     # Increased from 300s
+    server_tokens off;
     
-    # For WebSocket connections
+    # File upload size for Open WebUI
+    client_max_body_size 1G;
+    client_body_buffer_size 16k;
+    client_header_buffer_size 4k;
+    large_client_header_buffers 4 8k;
+
+    # Timeouts for AI model responses
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 600s;
+    proxy_read_timeout 600s;
+    proxy_buffering off;
+    
+    # WebSocket support (required for Open WebUI)
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $http_cf_connecting_ip;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $server_name;
+
+    # Trust Cloudflare IPs for real IP detection
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 173.245.48.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
+    set_real_ip_from 2400:cb00::/32;
+    set_real_ip_from 2606:4700::/32;
+    set_real_ip_from 2803:f800::/32;
+    set_real_ip_from 2405:b500::/32;
+    set_real_ip_from 2405:8100::/32;
+    set_real_ip_from 2c0f:f248::/32;
+    set_real_ip_from 2a06:98c0::/29;
+    real_ip_header CF-Connecting-IP;
 
     # GZIP Configuration
     gzip on;
-    gzip_comp_level 6;
-    gzip_min_length 256;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_proxied any;
     gzip_vary on;
+    gzip_min_length 256;
+    gzip_comp_level 6;
     gzip_types
         text/plain
         text/css
-        text/javascript
         text/xml
+        text/javascript
         application/javascript
         application/json
-        application/xml
-        application/x-javascript
-        application/xhtml+xml
-        application/rss+xml
+        application/xml+rss
         application/atom+xml
-        font/opentype
-        font/truetype
-        font/ttf
         image/svg+xml;
-    gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
     # Security Headers
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'";
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
     # Rate Limiting Zones
-    # 1. General rate limiting
-    limit_req_zone $binary_remote_addr zone=general_limit:1m rate=60r/m;
-    
-    # 2. Login attempt rate limiting
-    limit_req_zone $binary_remote_addr zone=login_limit:1m rate=5r/m;
-    
-    # Rate limit status page for failed login protection
-    limit_req_status 429;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
+    limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/30s;  # 1 request per 30 seconds for wrong subdomain
 
-    # Cache configuration for CDN proxy
-    proxy_cache_path /var/cache/nginx/cdn levels=1:2 keys_zone=cdn_cache:10m 
-                     max_size=1g inactive=365d use_temp_path=off;
+    # IP Whitelisting Configuration
+    # ALLOW ALL - Current setting
+    geo $allowed_ip {
+        default 1;  # Allow all IPs
+    }
+    
+    # RESTRICT ACCESS - Uncomment and modify the block below to enable IP restrictions:
+    # geo $allowed_ip {
+    #     default 0;                      # Deny all by default
+    #     127.0.0.1/32 1;               # Allow localhost
+    #     192.168.0.0/16 1;             # Allow private network 192.168.x.x
+    #     10.0.0.0/8 1;                 # Allow private network 10.x.x.x
+    #     172.16.0.0/12 1;              # Allow private network 172.16-31.x.x
+    #     YOUR_PUBLIC_IP/32 1;          # Replace with your specific public IP
+    #     YOUR_OFFICE_SUBNET/24 1;      # Replace with your office subnet
+    # }
+    #
+    # Examples for single IPs:
+    # 203.0.113.42/32 1;              # Allow specific IP
+    # 198.51.100.0/24 1;              # Allow entire subnet
+    #
+    # Common private networks:
+    # 192.168.1.0/24 1;               # Typical home network
+    # 10.0.0.0/24 1;                  # Docker default network
+    # 172.17.0.0/16 1;                # Docker bridge networks
 
-    # Server configuration
+    # Default server block for invalid domains
     server {
-        listen 80;
+        listen 80 default_server;
+        listen 443 ssl http2 default_server;
         server_name _;
         
-        # Root directory for static files
-        root /usr/share/nginx/html;
-
-        # CDN proxy for Bootstrap and other libraries
-        location /cdn/ {
-            proxy_pass https://cdn.jsdelivr.net/;
-            proxy_ssl_server_name on;
-            proxy_set_header Host cdn.jsdelivr.net;
-            
-            # Cache CDN resources for 30 days
-            proxy_cache cdn_cache;
-            proxy_cache_valid 200 30d;
-            proxy_cache_key "$scheme$proxy_host$request_uri";
-            proxy_ignore_headers Cache-Control;
-            add_header X-Cache-Status $upstream_cache_status;
-            add_header Cache-Control "public, immutable, max-age=2592000";
-            
-            # Gzip
-            gzip on;
-            gzip_types text/css application/javascript;
-        }
+        # SSL is terminated by Cloudflare, but we still listen on 443
+        # for requests that bypass Cloudflare
+        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
         
-        # Main application proxy
+        # Return error page for any domain that's not ai.junder.uk
         location / {
-            # General rate limiting
+            return 444; # Close connection without response
+        }
+    }
+
+    # Main server block for ai.junder.uk
+    server {
+        listen 80;
+        listen 443 ssl http2;
+        server_name ai.junder.uk;
+        
+        # SSL is terminated by Cloudflare, but we still listen on 443
+        # for requests that bypass Cloudflare
+        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+        
+        # IP Access Control - Return 403 for blocked IPs
+        if ($allowed_ip = 0) {
+            return 403;
+        }
+
+        # Main application proxy to Open WebUI
+        location / {
             limit_req zone=general_limit burst=10 nodelay;
             
-            proxy_pass http://quart-app:8000;
+            proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
             
             # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             
-            # Timeouts - INCREASED FOR 33B MODEL
-            proxy_connect_timeout 60s;   # Increased from 10s
-            proxy_send_timeout 600s;     # Increased from 30s
-            proxy_read_timeout 600s;     # Increased from 60s
-        }
-        
-        # WebSocket endpoint with longer timeouts
-        location /ws {
-            proxy_pass http://quart-app:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            
-            # WebSocket support
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            
-            # Significantly increased timeouts for WebSocket
+            # Extended timeouts for AI responses
             proxy_connect_timeout 60s;
             proxy_send_timeout 600s;
             proxy_read_timeout 600s;
+            proxy_buffering off;
+        }
+
+        # API endpoints with higher rate limits
+        location /api/ {
+            limit_req zone=api_limit burst=20 nodelay;
+            
+            proxy_pass http://open-webui:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
+            
+            # Extended timeouts for AI model inference
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;
+            proxy_read_timeout 600s;
+            proxy_buffering off;
+        }
+
+        # File upload endpoints with special limits
+        location /api/upload {
+            limit_req zone=upload_limit burst=5 nodelay;
+            
+            proxy_pass http://open-webui:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Host $server_name;
+            
+            # Increased timeouts for file uploads
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 1200s;
+            proxy_read_timeout 1200s;
+            proxy_buffering off;
+            
+            # Allow large file uploads
+            client_max_body_size 1G;
+        }
+
+        # Health check endpoint (no rate limiting)
+        location /health {
+            access_log off;
+            proxy_pass http://open-webui:8080/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $http_cf_connecting_ip;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+        }
+
+        # Block access to sensitive paths
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+    # Error server block for other junder.uk subdomains
+    server {
+        listen 80;
+        listen 443 ssl http2;
+        server_name *.junder.uk;
+        
+        # SSL is terminated by Cloudflare, but we still listen on 443
+        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
+        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
+        
+        # IP Access Control - Return 403 for blocked IPs
+        if ($allowed_ip = 0) {
+            return 403;
         }
         
-        # Login endpoint with stricter rate limiting
-        location /login {
-            limit_req zone=login_limit burst=3 nodelay;
+        # Serve error page for wrong subdomain with rate limiting
+        location / {
+            limit_req zone=wrong_subdomain burst=1 nodelay;
             limit_req_status 429;
             
-            proxy_pass http://quart-app:8000/login;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            root /usr/share/nginx/html;
+            try_files /wrong-subdomain.html =404;
+            add_header Content-Type text/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+            add_header Pragma "no-cache";
+            add_header Expires "0";
         }
         
-        # Static files
-        location /static/ {
-            alias /usr/share/nginx/html/static/;
-            expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
-        }
-        
-        # Custom 403 error page for unauthorized IP access
-        error_page 403 /unauthorized.html;
-        location = /unauthorized.html {
+        # Custom error page for rate limited requests
+        error_page 429 /rate-limited.html;
+        location = /rate-limited.html {
             root /usr/share/nginx/html;
             internal;
-        }
-        
-        # Custom 429 error page for rate limiting
-        error_page 429 /rate_limited.html;
-        location = /rate_limited.html {
-            root /usr/share/nginx/html;
-            internal;
+            add_header Content-Type text/html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
     }
-}
