--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,7 @@ http {
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per 60 seconds for wrong subdomain
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/30s;  # 1 request per 30 seconds for wrong subdomain
 
     # IP Whitelisting Configuration
     # ALLOW ALL - Current setting
@@ -136,7 +136,8 @@ http {
     # Default server block for invalid domains
     server {
         listen 80 default_server;
-        listen 443 ssl http2 default_server;
+        listen 443 ssl default_server;
+        http2 on;
         server_name _;
         
         # SSL is terminated by Cloudflare, but we still listen on 443
@@ -153,7 +154,8 @@ http {
     # Main server block for ai.junder.uk
     server {
         listen 80;
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name ai.junder.uk;
         
         # SSL is terminated by Cloudflare, but we still listen on 443
@@ -246,7 +248,8 @@ http {
     # Error server block for other junder.uk subdomains
     server {
         listen 80;
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name *.junder.uk;
         
         # SSL is terminated by Cloudflare, but we still listen on 443
@@ -280,3 +283,4 @@ http {
             add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
     }
+}
