--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,7 @@ http {
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/30s;  # 1 request per 30 seconds for wrong subdomain
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per 30 seconds for wrong subdomain
 
     # IP Whitelisting Configuration
     # ALLOW ALL - Current setting
