--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,7 @@ http {
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=30r/m;
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
-    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per 60 seconds for wrong subdomain
+    limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per minute for wrong subdomain
 
     # IP Whitelisting Configuration
     # ALLOW ALL - Current setting
@@ -136,14 +136,7 @@ http {
     # Default server block for invalid domains
     server {
         listen 80 default_server;
-        listen 443 ssl default_server;
-        http2 on;
         server_name _;
-        
-        # SSL is terminated by Cloudflare, but we still listen on 443
-        # for requests that bypass Cloudflare
-        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
         
         # Return error page for any domain that's not ai.junder.uk
         location / {
@@ -154,14 +147,7 @@ http {
     # Main server block for ai.junder.uk
     server {
         listen 80;
-        listen 443 ssl;
-        http2 on;
         server_name ai.junder.uk;
-        
-        # SSL is terminated by Cloudflare, but we still listen on 443
-        # for requests that bypass Cloudflare
-        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
         
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
@@ -245,16 +231,13 @@ http {
             deny all;
             access_log off;
             log_not_found off;
+        }
+    }
+
     # Error server block for other junder.uk subdomains
     server {
         listen 80;
-        listen 443 ssl;
-        http2 on;
         server_name *.junder.uk;
-        
-        # SSL is terminated by Cloudflare, but we still listen on 443
-        ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-        ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
         
         # IP Access Control - Return 403 for blocked IPs
         if ($allowed_ip = 0) {
