--- a/example.env
+++ b/example.env
@@ -10,5 +10,13 @@ OLLAMA_MEMORY_RESERVATION=12G
 # GPU Configuration
 NVIDIA_VISIBLE_DEVICES=all
 
+# Open WebUI Configuration
+ENABLE_SIGNUP=true
+
+# Default Admin User (created on first startup)
+DEFAULT_USER_EMAIL=admin@junder.uk
+DEFAULT_USER_NAME=Admin
+DEFAULT_USER_PASSWORD=admin123
+
 # Note: IP whitelisting is configured directly in nginx/nginx.conf
 # Edit the geo $allowed_ip block to restrict access to specific IPs
