--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -133,9 +133,12 @@ http {
     # 10.0.0.0/24 1;                  # Docker default network
     # 172.17.0.0/16 1;                # Docker bridge networks
 
-    # Default server block for invalid domains
+    # No SSL Configuration needed - Cloudflare handles SSL termination
+    # NGINX receives HTTPS traffic from Cloudflare and forwards HTTPS to Open WebUI
+
+    # Default HTTPS server block for invalid domains
     server {
-        listen 80 default_server;
+        listen 443 default_server;
         server_name _;
         
         # Return error page for any domain that's not ai.junder.uk
@@ -144,9 +147,9 @@ http {
         }
     }
 
-    # Main server block for ai.junder.uk
+    # Main HTTPS server block for ai.junder.uk
     server {
-        listen 80;
+        listen 443;
         server_name ai.junder.uk;
         
         # IP Access Control - Return 403 for blocked IPs
@@ -154,7 +157,7 @@ http {
             return 403;
         }
 
-        # Main application proxy to Open WebUI
+        # Main application proxy to Open WebUI (HTTPS to HTTP)
         location / {
             limit_req zone=general_limit burst=10 nodelay;
             
@@ -162,7 +165,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # WebSocket support
@@ -177,7 +180,7 @@ http {
             proxy_buffering off;
         }
 
-        # API endpoints with higher rate limits
+        # API endpoints with higher rate limits (HTTPS to HTTP)
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
@@ -185,7 +188,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # Extended timeouts for AI model inference
@@ -195,7 +198,7 @@ http {
             proxy_buffering off;
         }
 
-        # File upload endpoints with special limits
+        # File upload endpoints with special limits (HTTPS to HTTP)
         location /api/upload {
             limit_req zone=upload_limit burst=5 nodelay;
             
@@ -203,7 +206,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # Increased timeouts for file uploads
@@ -216,14 +219,14 @@ http {
             client_max_body_size 1G;
         }
 
-        # Health check endpoint (no rate limiting)
+        # Health check endpoint (HTTPS to HTTP)
         location /health {
             access_log off;
             proxy_pass http://open-webui:8080/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+            proxy_set_header X-Forwarded-Proto https;
         }
 
         # Block access to sensitive paths
@@ -234,9 +237,9 @@ http {
         }
     }
 
-    # Error server block for other junder.uk subdomains
+    # Error HTTPS server block for other junder.uk subdomains
     server {
-        listen 80;
+        listen 443;
         server_name *.junder.uk;
         
         # IP Access Control - Return 403 for blocked IPs
