--- a/example.env
+++ b/example.env
@@ -4,14 +4,15 @@
 SECRET_KEY=your-very-secret-key-change-this-in-production-make-it-long-and-random
 
 # Resource Limits
-OLLAMA_MEMORY_LIMIT=6G
-OLLAMA_MEMORY_RESERVATION=4G
+OLLAMA_MEMORY_LIMIT=20G
+OLLAMA_MEMORY_RESERVATION=12G
 
 # GPU Configuration
 NVIDIA_VISIBLE_DEVICES=all
 
 # Open WebUI Configuration
 ENABLE_SIGNUP=true
+WEBUI_URL=https://ai.junder.uk
 
 # Default Admin User (created on first startup)
 DEFAULT_USER_EMAIL=admin@junder.uk
