--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -133,11 +133,9 @@ http {
     # 10.0.0.0/24 1;                  # Docker default network
     # 172.17.0.0/16 1;                # Docker bridge networks
 
-    # No SSL Configuration needed - Cloudflare handles SSL termination
-    # NGINX receives HTTPS traffic from Cloudflare and forwards HTTPS to Open WebUI
-
-    # Default HTTPS server block for invalid domains
+    # Default server blocks for invalid domains
     server {
+        listen 80 default_server;
         listen 443 default_server;
         server_name _;
         
@@ -147,8 +145,9 @@ http {
         }
     }
 
-    # Main HTTPS server block for ai.junder.uk
+    # Main server block for ai.junder.uk (HTTP and HTTPS)
     server {
+        listen 80;
         listen 443;
         server_name ai.junder.uk;
         
@@ -157,7 +156,7 @@ http {
             return 403;
         }
 
-        # Main application proxy to Open WebUI (HTTPS to HTTP)
+        # Main application proxy to Open WebUI (HTTP/HTTPS to HTTP)
         location / {
             limit_req zone=general_limit burst=10 nodelay;
             
@@ -165,7 +164,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # WebSocket support
@@ -180,7 +179,7 @@ http {
             proxy_buffering off;
         }
 
-        # API endpoints with higher rate limits (HTTPS to HTTP)
+        # API endpoints with higher rate limits (HTTP/HTTPS to HTTP)
         location /api/ {
             limit_req zone=api_limit burst=20 nodelay;
             
@@ -188,7 +187,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # Extended timeouts for AI model inference
@@ -198,7 +197,7 @@ http {
             proxy_buffering off;
         }
 
-        # File upload endpoints with special limits (HTTPS to HTTP)
+        # File upload endpoints with special limits (HTTP/HTTPS to HTTP)
         location /api/upload {
             limit_req zone=upload_limit burst=5 nodelay;
             
@@ -206,7 +205,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
             
             # Increased timeouts for file uploads
@@ -219,14 +218,14 @@ http {
             client_max_body_size 1G;
         }
 
-        # Health check endpoint (HTTPS to HTTP)
+        # Health check endpoint (HTTP/HTTPS to HTTP)
         location /health {
             access_log off;
             proxy_pass http://open-webui:8080/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_cf_connecting_ip;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Block access to sensitive paths
@@ -237,8 +236,9 @@ http {
         }
     }
 
-    # Error HTTPS server block for other junder.uk subdomains
+    # Error server blocks for other junder.uk subdomains (HTTP and HTTPS)
     server {
+        listen 80;
         listen 443;
         server_name *.junder.uk;
         
