--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,12 @@ services:
       - CORS_ALLOW_ORIGIN=${WEBUI_URL:-https://ai.junder.uk}
       # Open WebUI URL configuration
       - WEBUI_URL=${WEBUI_URL:-https://ai.junder.uk}
+      # Suppress warnings
+      - USER_AGENT=Open-WebUI/1.0 (ai.junder.uk)
+      - LANGCHAIN_TRACING_V2=false
     volumes:
       - ollama_data:/root/.ollama
       - open_webui_data:/app/backend/data
-      # Mount SSL certificates volume for NGINX to use if needed
-      - nginx_ssl:/etc/nginx/ssl:ro
     networks:
       - ai-network
     deploy:
@@ -52,12 +53,10 @@ services:
     build: ./nginx
     container_name: ai-nginx
     ports:
+      - "80:80"
       - "443:443"
     depends_on:
       - open-webui
-    volumes:
-      # SSL certificates shared with open-webui container if needed
-      - nginx_ssl:/etc/nginx/ssl
     networks:
       - ai-network
     deploy:
@@ -78,4 +77,3 @@ networks:
 volumes:
   ollama_data:
   open_webui_data:
-  nginx_ssl:
