page load burst limit increase

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -101,8 +101,8 @@ http {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
 
-    # Rate Limiting Zones
-    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=60r/m;
+    # Rate Limiting Zones - UPDATED
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=150r/m;  # Increased from 30 to 150
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=60r/m;
     limit_req_zone $binary_remote_addr zone=upload_limit:10m rate=10r/m;
     limit_req_zone $binary_remote_addr zone=wrong_subdomain:10m rate=1r/m;  # 1 request per minute for wrong subdomain
@@ -123,15 +123,6 @@ http {
     #     YOUR_PUBLIC_IP/32 1;          # Replace with your specific public IP
     #     YOUR_OFFICE_SUBNET/24 1;      # Replace with your office subnet
     # }
-    #
-    # Examples for single IPs:
-    # 203.0.113.42/32 1;              # Allow specific IP
-    # 198.51.100.0/24 1;              # Allow entire subnet
-    #
-    # Common private networks:
-    # 192.168.1.0/24 1;               # Typical home network
-    # 10.0.0.0/24 1;                  # Docker default network
-    # 172.17.0.0/16 1;                # Docker bridge networks
 
     # Default server blocks for invalid domains
     server {
@@ -158,7 +149,7 @@ http {
 
         # Main application proxy to Open WebUI (HTTP/HTTPS to HTTP)
         location / {
-            limit_req zone=general_limit burst=10 nodelay;
+            limit_req zone=general_limit burst=100 nodelay;  # UPDATED: Increased burst
             
             proxy_pass http://open-webui:8080;
             proxy_set_header Host $host;
